--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        font-family: 'Lexend Deca', sans-serif;
+    }
+}
+
+@layer components {
+    .layer2TopHeader {
+        @apply font-Rozha font-medium leading-[3rem] text-layer1Grey text-[3.75rem];
+    }
+}
